Fix spacing of images and text in a section

--- a/_assets/css/sections/_section.scss
+++ b/_assets/css/sections/_section.scss
@@ -1,4 +1,5 @@
 .section {
+  display: flex;
   &__subtitle {
     font-size: 50px;
     font-weight: 600;
@@ -8,5 +9,9 @@
 
   &_light {
     background-color: $grey-50;
+  }
+
+  &__content_sm {
+    max-width: 1000px;
   }
 }
