--- a/_assets/css/sections/_thumb-cta.scss
+++ b/_assets/css/sections/_thumb-cta.scss
@@ -3,7 +3,11 @@
     background-color: $black;
     max-width: 400px;
     padding-top: 0;
-    width: 100%;
+    margin-bottom: 2rem;
+    @media only screen and (min-width: $tablet) {
+      margin-bottom: 0rem;
+      margin-right: 2rem;
+    }
 
     &_rev {
       margin-left: auto;
